--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -70,7 +70,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../walter/Walter White The Game.x86_64"
+export_path="../Exports/Walter White The Game.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
